-Exemplo de pesquisa construido -Construido prototipo da pagina empresa

--- a/Onibus/Empresa/Empresa.html
+++ b/Onibus/Empresa/Empresa.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="ISO-8859-1">
-<title>Insert title here</title>
-<script src="build/react.js"></script>
-<script src="build/react-with-addons.js"></script>
-<script src="build/react-dom.js"></script>
+<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
+<script src="../build/react.js"></script>
+<script src="../build/react-dom.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.24/browser.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.3.2/marked.min.js"></script>
+<title>Insert title here</title>
 </head>
 <body>
 <div id="content">
 
 </div>
-<script type="text/babel" src="listarEmpresa.js"></script>
+<script type="text/babel" src="Empresa.js"></script>
 </body>
 </html>
